--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,5 @@
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
-
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Android Profiling
-*.hprof
+TelegramBot/alzheimers_detection_model.h5
+TelegramBot/__pycache__/
+TelegramBot/.env
+Web/.env
+TelegramBot/parkinson_model.joblib
